--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
      driver-class-name: com.mysql.jdbc.Driver
-     url: jdbc:mysql://192.168.2.108/sell?characterEncoding=utf-8&useSSL=false
+     url: jdbc:mysql://192.168.2.104/sell?characterEncoding=utf-8&useSSL=false
      username: root
      password: 123456
      type: com.alibaba.druid.pool.DruidDataSource
@@ -15,9 +15,12 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 
+
 server:
-#  context-path: /sell
- port: 8010
+ context-path: /sell
+ port: 8080
+
+
 #日志的配置方式：1.在application中如下配置；2.在logback-spring.xml中进行配置
 #logging:
 #  pattern:
